Reduce data size plot

--- a/multi-scale-chunked-compressed/package.json
+++ b/multi-scale-chunked-compressed/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.6.2",
     "framer-motion": "^3.2.1",
+    "plotly.js": "^1.58.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
